Many layout fixes. Looks better on mobile

--- a/client/less/app.less
+++ b/client/less/app.less
@@ -30,15 +30,9 @@ div{
 	margin-bottom: 20px !important;
 }
 
-.schedule{
-  height: 585px;
-}
-
 .time-slots {
   overflow: scroll;
-
-
-
+  margin-bottom: 2rem;
   .flex-display();
   .flex-direction(column);
 
@@ -46,21 +40,27 @@ div{
     .flex-display();
     .flex-direction(row);
     .flex-grow(1);
+    height: 5rem;
 
-    height: 35px;
     .time{
-      width: 20%;
+      width: 30%;
+      background-color: #ddd;
+      border-bottom: 1px solid #fff;
       .flex-display();
       .justify-content(center);
       .align-items(center);
     }
+    .time:nth-child(even){
+		background-color: #ddd;
+      }
     .team{
-      width: 80%;
+      width: 70%;
       .flex-display();
       .justify-content(center);
       .align-items(center);
       font-weight: bolder;
       color: #fff;
+      border-bottom: 1px solid #ddd;
       &.taken {
         background-color: #F7AB97;
       }
