--- a/client/less/schedule.less
+++ b/client/less/schedule.less
@@ -1,3 +1,13 @@
+.navbar-fixed-top {
+    left: 15px;
+    border-width: 0 0 1px;
+    background: #fff;
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
+    @media screen and (max-width: 767px) {
+        position: relative;
+    }
+}
 .mh-control {
     margin-top: 1rem;
 }
@@ -12,16 +22,36 @@
     z-index: 999;
     border-bottom: 1px solid #ddd;
     padding: 20px 0;
-    &:first-child{
-    	position:fixed;
+    &:first-child {
+        position:fixed;
     }
 }
-#MentorList {
+.MentorList {
     margin-top: 12rem;
+    overflow-x: hidden;
 }
 .content {
-    margin-left: 300px;	
+    // margin-left: 300px;
     .col-sm-12 {
         padding-right: 0;
+        padding-left: 0;
+    }
+    .rangle-link {
+        margin-top: 2rem;
+        font-size: 1rem;
+        a {
+            color:#000;
+        }
+    }
+}
+@media screen and (max-width: @screen-xs-max) {
+    .container {
+        padding-left:0;
+    }
+    .time {
+        font-size: 1rem;
+    }
+    .MentorList {
+        margin-top: 3rem;
     }
 }
